Readme and final app
Signed-off-by: Pushpit <pushpit07@gmail.com>

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -16,6 +16,10 @@ body {
     background-color: #131016 !important;
 }
 
+.cursor_ptr {
+    cursor: pointer;
+}
+
 .text_color {
     color: rgb(190, 188, 188) !important;
 }
