Final app and updated readme
Signed-off-by: Pushpit <pushpit07@gmail.com>

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1b1927;
+    background-color: #141924;
     color: rgb(161, 161, 161);
 }
 
@@ -7,13 +7,13 @@ body {
 	border-radius: 3px;
 }
 
-.anonyverse {
-	color: #e92d75 !important;
+.finearts {
+	color: #8769f1 !important;
 	font-size: 1.3em !important;
 }
 
 .navbaar {
-    background-color: #131016 !important;
+    background-color: #060b13 !important;
 }
 
 .cursor_ptr {
@@ -24,35 +24,76 @@ body {
     color: rgb(190, 188, 188) !important;
 }
 
+.purple_text {
+    color: #9376fa;
+}
+
+input {
+	border: none !important;
+	outline: none !important;
+}
+
+input:focus {
+	border: none !important;
+	outline: none !important;
+}
+
+.upload {
+    font-size: 0.8em;
+}
+
+input::-webkit-file-upload-button {
+	border: none !important;
+	outline: none !important;
+	border-radius: 5px;
+	background: #523ba8;
+	margin-right: 15px;
+	color: rgb(233, 233, 233);
+	padding: 5px 12px 6px 12px;
+}
+
+input::-webkit-file-upload-button:hover {
+	cursor: pointer;
+    background-color: #3c2786;
+    color: rgb(228, 228, 228) !important;
+}
+
+
 .input_box {
-    background-color: #131016 !important;
+    background-color: #060b13 !important;
     border: none !important;
     outline: none !important;
     color: rgb(175, 175, 175) !important;
 }
 
 .input_box:active {
-    background-color: #131016 !important;
+    background-color: #060b13 !important;
     border: none !important;
     outline: none !important;
 }
 
 .share_button {
-    background-color: #d62a6c;
+    background-color: #523ba8;
     color: rgb(233, 233, 233) !important;
     border: none !important;
     outline: none !important;
 }
 
 .share_button:hover {
-    background-color: #af1e56;
+    background-color: #3c2786;
     color: rgb(228, 228, 228) !important;
 }
 
+.image {
+    max-width: 400px;
+    border-radius: 4px;
+}
+
 .tip_btn {
-    color: #e92d75 !important;
+    color: #8769f1 !important;
 }
 
 .background_dark  {
-    background-color: #131016 !important;
+    background-color: #060b13 !important;
 }
+
